fix: center aligned text

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
     margin: 0px auto;
     max-width: 50%;
     width: 100%;
-    /* min-width: 400px; */
 }
 
 /** navbar **/
@@ -66,6 +65,7 @@ body {
   }
   
   /* container */
+
   .container{
     background-color: var(--off-white);
     display: block;
@@ -89,26 +89,6 @@ body {
     border-radius: 0.3rem;
   }
 
-  .label-input, .angles, .sides, .length, .label-ques{
-    width: 50%;
-    min-width: 70%;
-    margin: 10px 3px;
-    padding: 0 1em;
-  }
-
-  .ques-para{
-    width: 50%;
-  }
-
-/* what is this now?  */
-
-/* .container{
-    width: 80%;
-    text-align: center;
-    margin: 5% 10%;
-    border: 1rem groove #eab308;
-} */
-
 textarea{
     max-width: 80%;
     width:80%;    
@@ -125,13 +105,13 @@ textarea{
     width: 90%;
     display: inline-block;
     text-align: center;
-    margin: .25rem 0;
+    margin: .25rem auto;
     padding: 0.5rem 0;
 }
 
 #txt-output{
     width: 90%;
-    margin: .25rem 0;
+    margin: .25rem auto;
     padding: 0.5rem 0;
     display: inline-block;
 }
